--- a/src/index.html
+++ b/src/index.html
@@ -27,4 +27,10 @@
     </div>
   </app-root>
 </body>
+<script>
+//    $(document).ready(function() {
+//        $('select').material_select();
+//    });
+</script>
+
 </html>
